--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,16 @@
 {
-    "name": "rust-devcontainer",
-    "image": "mcr.microsoft.com/devcontainers/rust:latest",
-    "postCreateCommand": "rustc --version",
-    "remoteUser": "vscode"
+	"name": "rust-devcontainer",
+	"image": "mcr.microsoft.com/devcontainers/rust:1-1-bookworm",
+    "postCreateCommand": "cargo install aoc-cli --version 0.12.0",
+
+	// Use 'mounts' to make the cargo cache persistent in a Docker Volume.
+	"mounts": [
+		{
+			"source": "devcontainer-cargo-cache-${devcontainerId}",
+			"target": "/usr/local/cargo",
+			"type": "volume"
+		}
+	],
+
+	"remoteUser": "vscode"
 }
